--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body{
+  padding-top: 29px;
+  width: 100%;
+  height: 100%;
+  font-family: 'Baloo Bhaijaan', Futura, cursive;
+}
+
+h1 {
+  position: absolute;
+  color: #fff;
+  background-color: rgba(128, 126, 126, 0.21);
+  padding: 20px;
+}
+
+h2 {
+  font-weight: 800;
+  background-color: rgba( 255, 255, 255, 0.3);
+}
+
+.navbar {
+  font-size: 1.2em;
+  font-family: Futura, cursive;
+}
+
+footer {
+    width: 100%;
+    text-align: center;
+    background-color: rgb(64, 20, 20);
+    height: 80px;
+    color: #fff;
+}
+
+footer p {
+  padding-top: 30px;
+}
