--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>BBikes</h1>
-<p>Find the best non stolen bikes in Berlin! We are commited to fight against the stolen bikes market.</p>
+<h1>About Us</h1>
+<%= image_tag("bbikes_1.jpg", class: "img-responsive my-image") %>
+<h2>Find the best non stolen bikes in Berlin!</h2>
