--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,3 @@
 <h1>Get in touch!</h1>
-<p>Feel free to contact us for any enquiry you have.</p>
+<%= image_tag("bbikes_1.jpg", class: "img-responsive my-image") %>
+<h2>Feel free to contact us for any enquiry you have.</h2>
