--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,14 @@
-<h1>About Us</h1>
-<%= image_tag("bbikes_1.jpg", class: "img-responsive my-image") %>
-<h2>Find the best non stolen bikes in Berlin!</h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 nopadding">
+      <h1>About Us</h1>
+      <%= image_tag("bbikes_2.jpg", class: "img-responsive my-image") %>
+      <div class="info">
+        <h2>Find the best non stolen bikes in Berlin!</h2>
+        <p> We guarantee the cleaningness of our business by selling only genuine used bicycles with propietary papers.</br>
+        With this measurements we combat and don´t support the black bike market of stolen bikes in Berlin.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
