--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,11 @@
-<h1>Get in touch!</h1>
-<%= image_tag("bbikes_1.jpg", class: "img-responsive my-image") %>
-<h2>Feel free to contact us for any enquiry you have.</h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 nopadding">
+      <h1>Get in touch!</h1>
+      <%= image_tag("bbikes_3.jpg", class: "img-responsive my-image") %>
+      <div class="info">
+        <h2>Feel free to contact us for any enquiry you have.</h2>
+      </div>
+    </div>
+  </div>
+</div>
