--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,14 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body{
-  padding-top: 29px;
+  padding-top: 5px;
   width: 100%;
   height: 100%;
   font-family: Futura, cursive;
   padding-bottom: 50px;
+  background-color: lightyellow;
 }
 
-.projectName, a {
+.projectName {
   color:#fff !important;
 }
 
@@ -20,10 +21,7 @@ body{
 }
 
 h1 {
-  position: absolute;
-  background-color: rgba(128, 126, 126, 0.5);
   padding: 20px;
-  color: #fff;
   text-align: center;
 }
 
@@ -47,6 +45,9 @@ h1 {
   padding-left: 4px;
 }
 
+.social-icons a {
+  color: #fff;
+}
 
 
 footer {
