--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,10 @@
           </div> <!-- / projectName --> 
         </div> <!-- / navbar header -->
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Home</a></li>
+          <ul class="nav navbar-nav">
+            <li><a href="#products">Products</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#faq">FAQ</a></li>
           </ul>
         </div><!-- / navbar-collapse -->
       </div><!-- / container-fluid -->
