--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
           </button> 
           <div class="projectName navbar-brand">
-            <span>Brln_Bikes</span>
+            <a href="/static_pages/index"><span>Brln_Bikes</span></a>
             <div class="social-icons">
               <span><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></span>
               <span><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
@@ -35,9 +35,9 @@
         </div> <!-- / navbar header -->
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#products">Products</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/products">Products</a></li>
+            <li><a href="/static_pages/about">About</a></li>
+            <li><a href="/static_pages/contact">Contact</a></li>
           </ul>
         </div><!-- / navbar-collapse -->
       </div><!-- / container-fluid -->
