--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
           </button> 
           <div class="projectName navbar-brand">
-            <a href="/static_pages/index"><span>Brln_Bikes</span></a>
+            <span>Brln_Bikes</span>
             <div class="social-icons">
               <span><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></span>
               <span><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
