--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,3 +1,3 @@
 <h2>Featured Product:</h2>
 <%= @featured_product.name %>
-<%= @featured_product.image_url %>
+<%= image_tag(@featured_product.image_url) %>
