--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -8,3 +8,19 @@ a {
 a:hover {
   text-decoration: none;
 }
+ #prod {
+  text-align: center;
+}
+
+h1 {
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding-left: 5%;
+  padding-top: 10px; 
+}
+
+.prod_desc {
+  padding: 5px 0px 10px 0;
+  background-color: #E9E9E9;
+}
