--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,7 +6,7 @@ body{
   padding-top: 35px;
   width: 100%;
   height: 100%;
-  font-family: Futura, cursive;
+  font-family: Futura, Arial, sans-serif;
   padding-bottom: 50px;
   background-color: lightyellow;
 }
@@ -110,4 +110,22 @@ footer p {
 
 .carousel-indicators > .active {
 	background-color: #000;
+}
+
+
+
+@media screen and (max-width: 420px), screen and (max-device-width: 420px) {
+
+  .carousel-inner > .item > a > img {
+    width: 100%;
+  }
+
+  .carousel-caption {
+    background-color: rgba(0, 0, 0, 0.30);
+    color: #fff;
+    height: 100%;
+    text-align: center;
+    right: 0;
+    left: 0;
+  }
 }
