--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,9 @@
         </div> <!-- / navbar header -->
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/products">Products</a></li>
-            <li><a href="/static_pages/about">About</a></li>
-            <li><a href="/static_pages/contact">Contact</a></li>
+            <li><%= link_to "Products", products_path %></li>
+            <li><%= link_to "About", static_pages_about_path %></li>
+            <li><%= link_to "Contact", static_pages_contact_path %></li>
           </ul>
         </div><!-- / navbar-collapse -->
       </div><!-- / container-fluid -->
