--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,56 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Nameofapp</title>
-    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://use.fontawesome.com/a4bbe3493d.js"></script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <%= csrf_meta_tags %>
-  </head>
-
+<%= render 'static_pages/head' %>
   <body>
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse"
-          data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button> 
-          <div class="projectName navbar-brand">
-            <a href="/"><span>Brln_Bikes</span></a>
-            <div class="social-icons">
-              <span><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></span>
-              <span><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
-            </div>
-          </div> <!-- / projectName --> 
-        </div> <!-- / navbar header -->
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Products", products_path %></li>
-            <li><%= link_to "About", static_pages_about_path %></li>
-            <li><%= link_to "Contact", static_pages_contact_path %></li>
-          </ul>
-        </div><!-- / navbar-collapse -->
-      </div><!-- / container-fluid -->
-    </nav><!-- / navbar -->
-    
-    <%= yield %>
-
-    <footer class= "navbar navbar-inverse navbar-fixed-bottom">
-      <div class="container-fluid">
-        <div class= "copyright">
-          <p>&copy; 2017 BBikes</p>
-        </div>
-      </div>  
-    </footer>  
+  <%= render 'static_pages/nav' %>
+  <%= yield %>
+  <%= render 'static_pages/footer'%>
   </body>
 </html>
