--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -39,5 +39,8 @@
     <div class="actions">
       <%= form.submit class: "btn btn-default"  %>
     </div>
+    <br>
+    <%= link_to 'Show', @product %> |
+    <%= link_to 'Back', products_path %>
   </div>  
 <% end %>
