--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -9,6 +9,11 @@ body {
   font-family: Futura, Arial, sans-serif;
   padding-bottom: 50px;
   background-color: lightyellow;
+
+  a:hover {
+    color: #000;
+  }
+
 }
 
 .info {
@@ -24,113 +29,6 @@ body {
  font-weight: 300;
  position: relative;
  text-align: center;
-}
-
-/*//Navbar//*/
-
-.navbar {
-  font-size: 1.2em;
-}
-
-.navbar a {
-  color: #fff;
-  text-decoration: none;
-  
-}
-
-.projectName {
-  color:#fff !important;
-}
-
-.nopadding {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-.social-icons {
-  display: inline;
-  letter-spacing: 2px;
-  padding-left: 4px;
-}
-
-.social-icons a {
-  color: #fff;
-}
-
-.search_bar {
-  form > label {
-    display: none;
-  }
-
-  #q {
-    padding: 2px 0 3px 5px;
-  }
-
-  input {
-   border-width: 0;
-   background-color: #fff;
-  }
-
-  padding-top: 3px;
-}
-
-/*//Footer//*/
-
-
-footer {
-    text-align: center;
-    color: #fff;
-  
-  p {
-    padding-top: 15px;
-  }
-}
-/*//Carousel//*/
-
-#carousel-example-generic {
-    margin-top: 30px;
-    background-color: #fff;
-}
-
-.carousel-caption {
-  color: #000;
-  text-transform: uppercase;
-	right: 10%;
-	left: 55%;
-	top: 2%;
-  text-shadow: none;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.15);
-  display: inline-block;
-  height: 40%; 
-}
-
-.carousel-inner img {
-  margin: auto;
-}
-
-.carousel-control {
-  background-image: none !important;
-  text-shadow: none;
-  opacity: 100;
-  color: #000;
-}
-
-.carousel-indicators {
-  bottom: -60px;
-}
-
-.carousel-indicators > li {
-	border: 0;
-	border-radius: 0;
-	background-color: #999;
-	width: 12px;
-	height: 12px;
-	margin: 0;
-}
-
-.carousel-indicators > .active {
-	background-color: #000;
 }
 
 /*/Product Page /*/
@@ -149,36 +47,3 @@ footer {
   padding: 0 !important;
   margin: 0 !important;
 }
-
-/*/Form Resource Styling /*/
-
-.form_wrapper{
-  padding: 0 20% 0 5%;
-}
-
-
-/*/ Media Querys /*/
-@media screen and (max-width: 420px), screen and (max-device-width: 420px) {
-  
-    .carousel-inner > .item > a > img {
-      width: 100%;
-    }
-  
-    .carousel-caption {
-      background-color: rgba(0, 0, 0, 0.30);
-      color: #fff;
-      height: 100%;
-      text-align: center;
-      right: 0;
-      left: 0;
-    }
-    .product_info {
-      text-align: center;
-    }
-  }
-  @media screen and (max-width: 768px), screen and (max-device-width: 768px){
-    
-      .product_info {
-        clear: both;
-      }
-  }
