--- a/app/views/static_pages/_head.html.erb
+++ b/app/views/static_pages/_head.html.erb
@@ -1,5 +1,5 @@
 <head>
-    <title>Nameofapp</title>
+    <title>Bbikes</title>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
