--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,23 +3,16 @@
 <div class = "contact-wrapper">
   <%= flash[:notice] %>
 
-  <%= form_with(url:"/static_pages/thank_you") do |form| %>
-    <div class = "row">
-      <div class = "col-md-4">
-        <div class = "form-group">
-          <%= form.label :name %>
-          <%= form.text_field :name, class: "form-control", placeholder: "Enter Name" %>
-        </div>
-        <div class = "form-group">
-          <%= form.label :email, "Email Address"%>
-          <%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
-          </div>
-        <div class = "form-group">
-          <%= form.label :message %>
-          <%= form.text_area :message, class: "form-control", placeholder: "Enter Message" %>
-        </div>
+  <%= form_tag("/static_pages/thank_you") do %>
+      <div class="form-group">
+        <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name", :required => true %>
+      </div>      
+      <div class="form-group">
+        <%= email_field_tag :email, nil, class: "form-control", placeholder: "Enter Email", :required => true %>
       </div>
-    </div>
-    <%= form.submit "Send", class: "btn btn-default" %>
+      <div class="form-group">
+        <%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message", :required => true %>
+      </div>      
+  <%= submit_tag "Send", class: "btn btn-default send-button" %>   
   <% end %>
 </div>
