--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -43,6 +43,8 @@
           <div class="info_text">
             <h2>The best bikes in Berlin!</h2>
             <p>Check our awesome collection of used bikes.</p>
+            <span class="notice"><%= notice %></span>
+            <span class="alert"><%= alert %></span>
         </div>
       </div>  
     </div>  
