--- a/app/views/static_pages/_nav.html.erb
+++ b/app/views/static_pages/_nav.html.erb
@@ -18,9 +18,16 @@
         </div> <!-- / navbar header -->
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Products", products_path %></li>
-            <li><%= link_to "About", static_pages_about_path %></li>
-            <li><%= link_to "Contact", static_pages_contact_path %></li>
+          <li id="login_btn">
+            <% if user_signed_in? %>
+              <%= link_to('Logout', logout_path, method: :delete) %>
+            <% else %>
+              <%= link_to('Login', login_path) %>  
+            <% end %>
+            </li>  
+            <li> <%= link_to "Products", products_path %> </li>
+            <li> <%= link_to "Contact", static_pages_contact_path %> </li>
+            <li> <%= link_to "About", static_pages_about_path %> </li>
           </ul>
           <div class = "navbar-form navbar-right search_bar form-inline">
             <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
