--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -51,9 +51,9 @@ body {
 
 .alert, .notice {
   text-align: center;
-  padding: 0;
+  padding: 3px;
   margin: 0;
-  color: red;
+  color: #223072;
   display: inline;
 }
 
