--- a/app/views/static_pages/_nav.html.erb
+++ b/app/views/static_pages/_nav.html.erb
@@ -20,7 +20,20 @@
           <ul class="nav navbar-nav">
           <li id="login_btn">
             <% if user_signed_in? %>
+            <li id="fat-menu" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+               <%= current_user.first_name %>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", user_path(current_user) %></li> 
+              <li><%= link_to "Settings", edit_user_registration_path %></li>
+              <li class="divider"></li>
+              <li> 
               <%= link_to('Logout', logout_path, method: :delete) %>
+              </li>
+              </ul>
+              </li>
             <% else %>
               <%= link_to('Login', login_path) %>  
             <% end %>
