--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,4 +26,7 @@
     <%= form.submit "Update User", class: "btn btn-default send-button" %>
   </div>
 <% end %>
+</br>
+<%= link_to 'Show', @user %> |
+<%= link_to 'Back', users_path %>
 </div>
