--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,6 +20,9 @@
           <div class = "product_price">
           <p>Price: </br><strong><%= @product.price %></strong></p>
           </div>
+          <div class = "product_rating">
+          <%= @product.highest_rating_comment %>
+          </div>
         </div>  
       </div>
    </div>    
