--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,7 +5,7 @@
       <a href="#"><h2><%= link_to product.name, product %></h2></a>
       <p><strong>Description</strong><br><%= product.description %></p>
       <p><strong>Colour</strong><br><%= product.colour %></p>
-      <p><strong>Price<br><%= product.price %></strong></p>
+      <p><strong>Price<br><span class="glyphicon glyphicon-euro" aria-hidden="true"></span><%= product.price %></strong></p>
     </div>
   </div>
     <h5>
