--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,17 +17,17 @@
           <div class = "product_color">
              <p><%= @product.colour %></p>
           </div>
+          <p>Average Rating: <div class="rated" data-score="
+          <%= @product.average_rating %>"></div></p>
           <div class = "product_price">
           <p>Price: </br><strong><%= @product.price %></strong></p>
           </div>
-          <div class = "product_rating">
-          <%= @product.highest_rating_comment %>
-          </div>
         </div>  
       </div>
-   </div>    
+    </div>
+    <%= render 'new_comment' %> 
+    <%= render 'comments' %>   
   </div>
-  <%= link_to 'Back', products_path %>
 </div>
 
 
