Comments text fix

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -25,3 +25,15 @@ h1 {
   background-color: #E9E9E9;
   max-width: 555px;
 }
+
+.product-reviews{
+  
+  background-color: #ffebc7;
+  padding: 20px;
+
+  p {
+    word-break: break-all;
+    margin: 10px 30px;
+  }
+ 
+}
