--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -31,16 +31,30 @@ body {
  text-align: center;
 }
 
-/*/Product Page /*/
+.alert, .notice {
+  display: block;
+  padding-top: 30px;
+  margin-bottom: 0;
+  }
 
-.prod_wrapper{
+/*/Product Show Page /*/
+
+.prod_wrapper {
   background-color: #fff;
+  width: 100%;
+  height: 400px;
 }
+
 .product_info {
-  height: 377px;
   padding-left: 40px;
   padding-top: 5%;
+  padding-bottom: 3%;
   
+}
+
+.product_img {
+  
+  padding-left: 35px;
 }
 
 .nopadding {
@@ -48,20 +62,24 @@ body {
   margin: 0 !important;
 }
 
-
-.alert, .notice {
-display: block;
-padding-top: 30px;
-margin-bottom: 0;
+#user_title {
+  padding-left: 0px;
 }
+
+/*/ Form Styling /*/
 
 .form_wrapper {
   padding: 1% 20% 0 5%;
 }
 
-#user_title {
-  padding-left: 0px;
-}
+// Media Queries
+
+@media screen and (max-width: 768px), screen and (max-device-width: 768px){
+  
+    .prod_wrapper {
+      height: 380px;
+    }
+  }
 
 @media screen and (max-width: 420px), screen and (max-device-width: 420px){
   
@@ -69,6 +87,15 @@ margin-bottom: 0;
     margin: auto;
     width: 50%;    
 
+  }
+
+  .product_info {
+    text-align: center;
+    padding: 0;
+  }
+
+  .prod_wrapper {
+    height: 500px;
   }
 
 }
