--- a/app/views/static_pages/_footer.html.erb
+++ b/app/views/static_pages/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class= "navbar navbar-inverse navbar-fixed-bottom">
       <div class="container-fluid">
         <div class= "copyright">
-          <p>&copy; 2017 BBikes</p>
+          <small>&copy; 2017 Martin Teysera</small>
         </div>
       </div>  
     </footer>  
