--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .info {
-  background-color: #999;
+  background-color: #e9e9e9;
   padding: 50px 0px;
   width: 100%;
 }
@@ -66,10 +66,20 @@ body {
   padding-left: 0px;
 }
 
+/*/ About Info /*/
+.about-info {
+  padding: 20px 0 0 0px;
+  margin-left: 5%;
+}
+
 /*/ Form Styling /*/
 
 .form_wrapper {
   padding: 1% 20% 0 5%;
+}
+
+.form-control {
+  max-width: 450px;
 }
 
 // Media Queries
@@ -87,6 +97,10 @@ body {
     margin: auto;
     width: 50%;    
 
+  }
+
+  .product_img {
+    padding: 0;
   }
 
   .product_info {
