--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-xs-12 nopadding">
       <h1>About Us</h1>
-      <%= image_tag("bbikes_2.jpg", class: "img-responsive my-image") %>
-      <div class="info">
-        <h2>Find the best non stolen bikes in Berlin!</h2>
-        <p> We guarantee the cleaningness of our business by selling only genuine used bicycles with propietary papers.</br>
-        With this measurements we combat and don´t support the black bike market of stolen bikes in Berlin.
-        </p>
+      <div class="about-info">
+      <p>Brln_Bikes is a small start-up focused on renting and selling bicyles, </br>
+      we have a great collection of used and new bicyles, from city & mountain bikes up to BMX and kids bikes.<br>
+      Our commitment is to support sustainable and enviromental friendly means fo transport.<br>
+      <p>&copy; 2017 |Brln_Bikes|</p>
+      </p>
       </div>
     </div>
   </div>
