--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-12 col-sm-4">
   <div id=prod>
-    <%= image_tag(product.image_url, class: "img-responsive") %>
+    <%= link_to image_tag(product.image_url, class: "img-responsive"), product %>
     <div class=prod_desc>
       <a href="#"><h2><%= link_to product.name, product %></h2></a>
       <p><strong>Description</strong><br><%= product.description %></p>
@@ -9,8 +9,10 @@
     </div>
   </div>
     <h5>
-      <%= link_to 'Show', product %>
-      <%= link_to 'Edit', edit_product_path(product) %>
-      <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% if current_user && current_user.admin? %>
+      <%= link_to 'Edit', edit_product_path(product) %> |
+      <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %> |
+      <%= link_to 'Add Product', new_product_path %>
+      <% end %>
     </h5>
 </div><!-- /col -->
