--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,12 +20,15 @@
           <p>Average Rating: <div class="rated" data-score="
           <%= @product.average_rating %>"></div></p>
           <div class = "product_price">
-          <p>Price $: </br><strong><%= @product.price %></strong></p>
+          <p>Price: </br><strong><%= (@product.price / 100) %></strong></p>
           </div>
           <div class ="product_buy">
-            <%= form_with(url: '/payments/create') do |form| %>
-            <%= render partial: "shared/stripe_checkout_button", locals: {product: @product} %>
-            <% end %>
+            <% if signed_in? %>
+              <%= form_with(url: '/payments/create') do |form| %>
+              <%= hidden_field_tag(:product_id, @product.id) %>
+              <%= render partial: "shared/stripe_checkout_button", locals: {product: @product} %>
+              <% end %>
+            <% end %>  
           </div>
         </div>  
       </div>
