--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -2,6 +2,7 @@
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-name="Brnl_Bikes"
-  data-description= "<%= @product.description %>"
-  data-amount="<%= @product.price %>">
+  data-description= "<%= @product.name %>"
+  data-amount="<%= @product.price %>"
+  data-email="<%= current_user.email %>">
 </script>
