--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -3,6 +3,6 @@
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-name="Brnl_Bikes"
   data-description= "<%= @product.name %>"
-  data-amount="<%= @product.price %>"
+  data-amount="<%= @product.price * 100 %>"
   data-email="<%= current_user.email %>">
 </script>
