--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
     <div class = "prod_wrapper">
       <div class = "col-xs-12 col-sm-6 nopadding">
         <div class = "product_img">
-          <%= image_tag(@product.image_url, class: "img-responsive") %>
+          <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: @product.image_url) %>
         </div>  
       </div>    
       <div class = "col-xs-12 col-sm-6 nopadding">
