--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,13 +1,6 @@
 <div class="product-reviews">
     <% @comments.each do |comment| %>
-        <hr>
-        <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small>
-        <% if signed_in? && current_user.admin? %>
-        <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
-        <% end %>
-        </p>
-        <p class="rated" data-score="<%= comment.rating %>"></p>
-        <p><%= comment.body %></p>
+        <%= render comment %>
     <% end %>
     <div class ="pagination">
     <p> <%= will_paginate @comments, class: "apple_pagination" %></p>
