--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,8 +17,7 @@
           <div class = "product_color">
              <p><%= @product.colour %></p>
           </div>
-          <p>Average Rating: <div class="rated" data-score="
-          <%= @product.average_rating %>"></div></p>
+          <p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div> </p>
           <div class = "product_price">
           <p>Price: </br><strong><%= (@product.price) %></strong></p>
           </div>
