--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -31,7 +31,7 @@ h1 {
   background-color: #ffebc7;
   padding: 20px;
 
-  p {
+  p, .rated {
     word-break: break-all;
     margin: 10px 30px;
     font-size: 1.1em;
