--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,7 +6,7 @@
       <p>Brln_Bikes is a small start-up focused on renting and selling bicyles, </br>
       we have a great collection of used and new bicyles, from city & mountain bikes up to BMX and kids bikes.<br>
       Our commitment is to support sustainable and enviromental friendly means of transport.<br>
-      <p>&copy; 2017 |Brln_Bikes|</p>
+      <p>&copy; 2017 B|B</p>
       </p>
       </div>
     </div>
