--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,7 +1,7 @@
   
   <div class = "container-fluid">  
     <div class = "row">  
-      <div class = col-xs-12> 
+      <div class = "col-xs-12" id="carousel"> 
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
@@ -38,12 +38,10 @@
       </div>
     </div> 
     <div class = "row"> 
-      <div class = "col-xs-12">
-        <div class="info">
+      <div class = "col-xs-12 info">
           <div class="info_text">
             <h2>The best bikes in Berlin!</h2>
             <p>Check our awesome collection of used bikes.</p>
-        </div>
       </div>  
     </div>  
   </div>  
