--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
+ <% cache product do %>
 <div class="col-xs-12 col-sm-4">
-  <div id=prod>
-  <% cache product do %>
+  <div id=prod
     <%= link_to image_tag(product.image_url, class: "img-responsive"), product %>
     <div class=prod_desc>
       <a href="#"><h2><%= link_to product.name, product %></h2></a>
@@ -9,12 +9,12 @@
       <p><strong>Price<br><span class="glyphicon glyphicon-euro" aria-hidden="true"></span><%= product.price %></strong></p>
     </div>
   </div>
+  <% end %>
     <h6>
       <% if current_user && current_user.admin? %>
       <%= link_to 'Edit', edit_product_path(product) %> |
       <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %> |
       <%= link_to 'Add Product', new_product_path %>
-      <% end %>
       <% end %>
     </h6>
 </div><!-- /col -->
