--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,6 +18,7 @@
              <p><%= @product.colour %></p>
           </div>
           <p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div> </p>
+          <p>Views: <span class="badge"><%= @product.views %></span></p>
           <div class = "product_price">
           <p>Price: </br><strong><%= (@product.price) %></strong></p>
           </div>
