--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,6 +34,7 @@
       </div>
     </div>
     <div class = "col-xs-12 col-sm-6 nopadding">
+    <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
     <%= render 'comments' %>   
     </div>
     <div class = "col-xs-12 col-sm-6 nopadding">
