--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Back', products_path %>
 
 <div class = "container-fluid">
-  <div class = "row">
+  <div class = "row" data-product-id="<%= @product.id %>">
     <div class = "prod_wrapper">
       <div class = "col-xs-12 col-sm-6 nopadding">
         <div class = "product_img">
